--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(tower
 	src/img/image.hpp
 	src/img/media_path.hpp
 	src/img/stb_image.h
+	src/aircraft_crash.hpp
 	src/aircraft_factory.cpp
 	src/aircraft_factory.hpp
 	src/aircraft_manager.cpp
